--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ YOURAPIKEYHERE = getOption('ZillowR-zws_id')
 [![Codecov test coverage](https://codecov.io/gh/xiyuansun/realEstAnalytics/branch/master/graph/badge.svg)](https://codecov.io/gh/xiyuansun/realEstAnalytics?branch=master)
 <!-- badges: end -->
 
-The goal of realEstAnalytics is to provide an R function for each zillow API service, making it easy to make API calls and process the responses into R-friendly data structures. 
+The goal of IDX is to provide an R function for each zillow API service, making it easy to make API calls and process the responses into R-friendly data structures. 
 
 ## Website
 - The package is hosted at https://www.realestanalyticsr.com/
